--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,7 @@
 phases:
   install:
     commands:
-      - pip install pycodestyle pydocstyle pytest
+      - pip install -r requirements.txt
 
   pre_build:
     commands:
