toxic avenger part 2

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ passenv =
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
+    -r requirements.txt
     -r squrl/requirements.txt
 commands =
     black --check --diff squrl
