--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,7 @@
 phases:
   install:
     commands:
-      - pip install -r requirements.txt
+      - pip install aws-sam-cli tox
 
   pre_build:
     commands:
@@ -10,9 +10,7 @@ phases:
 
   build:
     commands:
-      - pycodestyle squrl
-      - pydocstyle squrl
-      - pytest
+      - tox
 
   post_build:
     commands:
