--- a/template.yml
+++ b/template.yml
@@ -18,6 +18,12 @@ Parameters:
     Default: www.squrl.com
 
 Resources:
+  SqurlCloudFrontOriginAccessIdentity:
+    Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
+    Properties:
+      CloudFrontOriginAccessIdentityConfig:
+        Comment: !Sub CloudFront origin access identity: ${S3BucketParameter}
+
   SqurlS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -27,6 +33,19 @@ Resources:
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: error.html
+
+  SqurlS3BucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref SqurlS3Bucket
+      PolicyDocument:
+        Statement:
+          - Action:
+              - s3:GetObject
+            Effect: Allow
+            Resource: !Sub arn:aws:s3:::${SqurlS3Bucket}/*
+            Principal:
+              CanonicalUser: !GetAtt SqurlCloudFrontOriginAccessIdentity.S3CanonicalUserId
 
   SqurlApi:
     Type: AWS::Serverless::Api
@@ -59,12 +78,28 @@ Resources:
             RestApiId: !Ref SqurlApi
             Method: post
             Path: /url
-        PutUrl:
-          Type: Api
-          Properties:
-            RestApiId: !Ref SqurlApi
-            Method: put
-            Path: /url
+
+  SqurlCloudFront:
+    Type: AWS::CloudFront::Distribution
+    Properties:
+      DistributionConfig:
+        DefaultCacheBehavior:
+          ForwardedValues:
+            QueryString: true
+          TargetOriginId: !Ref S3BucketParameter
+          ViewerProtocolPolicy: redirect-to-https
+        DefaultRootObject: index.html
+        CustomErrorResponses:
+          - ErrorCode: 403
+            ResponseCode: 404
+            ResponsePagePath: /error.html
+        Enabled: true
+        HttpVersion: http2
+        Origins:
+          - DomainName: !GetAtt SqurlS3Bucket.DomainName
+            Id: !Ref S3BucketParameter
+            S3OriginConfig:
+              OriginAccessIdentity: !Sub origin-access-identity/cloudfront/${SqurlCloudFrontOriginAccessIdentity}
 
 Outputs:
   SqurlApi:
@@ -75,10 +110,14 @@ Outputs:
     Description: Squrl Lambda Function Arn
     Value: !GetAtt SqurlApiLambda.Arn
 
-  SqurlApiLambdaIamRole:
-    Description: Squrl Lambda Execution Role Arn
-    Value: !GetAtt SqurlApiLambdaRole.Arn
-
   SqurlS3Bucket:
     Description: Squrl S3 Bucket Url
     Value: !GetAtt SqurlS3Bucket.DomainName
+
+  SqurlCloudFrontDistribution:
+    Description: Squrl CloudFront Distribtion Id
+    Value: !Ref SqurlCloudFrontDistribution
+
+  SqurlCloudFrontDomainName:
+    Description: Squrl CloudFront Distribtion Domain Name
+    Value: !GetAtt SqurlCloudFrontDistribution.DomainName
